<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>yangtools</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <yangtools.version>15.0.3-SNAPSHOT</yangtools.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.17</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-parser-rfc7950</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-parser-reactor</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-repo-fs</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-repo-spi</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-model-api</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>rfc7952-parser-support</artifactId>
            <version>${yangtools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>rfc8040-parser-support</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-data-codec-gson</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-data-impl</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-xpath-impl</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

        <dependency>
            <groupId>org.opendaylight.yangtools</groupId>
            <artifactId>yang-test-util</artifactId>
            <version>${yangtools.version}</version>
        </dependency>

    </dependencies>

</project>